# icp-project

./: .gitignore  AccessModifier_8cpp.html  AccessModifier_8cpp_source.html  AccessModifier_8h.html  AccessModifier_8h_source.html  ActivationGraphicsObjectBase_8cpp.html  ActivationGraphicsObjectBase_8cpp_source.html  ActivationGraphicsObjectBase_8h.html  ActivationGraphicsObjectBase_8h_source.html  ActivationObjectEmitter_8cpp.html  ActivationObjectEmitter_8cpp_source.html  ActivationObjectEmitter_8h.html  ActivationObjectEmitter_8h_source.html  ActorGraphicsItemEditDialog_8cpp.html  ActorGraphicsItemEditDialog_8cpp_source.html  ActorGraphicsItemEditDialog_8h.html  ActorGraphicsItemEditDialog_8h_source.html  ActorGraphicsItem_8cpp.html  ActorGraphicsItem_8cpp_source.html  ActorGraphicsItem_8h.html  ActorGraphicsItem_8h_source.html  Actor_8h.html  Actor_8h_source.html  Aggregation_8h.html  Aggregation_8h_source.html  AgregationLine_8cpp.html  AgregationLine_8cpp_source.html  AgregationLine_8h.html  AgregationLine_8h_source.html  AppException_8h.html  AppException_8h_source.html  AssociationLineEditDialog_8cpp.html  AssociationLineEditDialog_8cpp_source.html  AssociationLineEditDialog_8h.html  AssociationLineEditDialog_8h_source.html  AssociationLine_8cpp.html  AssociationLine_8cpp_source.html  AssociationLine_8h.html  AssociationLine_8h_source.html  AsyncMessageLine_8h.html  (+436 more)
.github/: auto_assign.yml
.github/workflows/: basic-tests.yml  github-pr-automation.yml
examples/: .gitignore  class-diagram-output.cls.xml  class-diagram-output.xml  example-class-diagram.cls.xml  example-class-diagram.xml  example-sequence-diagram.seq.xml  sequence-diagram-output.seq.xml  sequence-diagram-output.xml
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_e.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  (+57 more)
src/: AccessModifier.cpp  AccessModifier.h  ActivationGraphicsObjectBase.cpp  ActivationGraphicsObjectBase.h  ActivationObjectEmitter.cpp  ActivationObjectEmitter.h  Actor.cpp  Actor.h  ActorGraphicsItem.cpp  ActorGraphicsItem.h  ActorGraphicsItemEditDialog.cpp  ActorGraphicsItemEditDialog.h  Aggregation.h  Agregation.cpp  Agregation.h  AgregationLine.cpp  AgregationLine.h  AppException.h  AssociationLine.cpp  AssociationLine.h  AssociationLineEditDialog.cpp  AssociationLineEditDialog.h  AsyncMessageLine.h  AttributeEditWidget.cpp  AttributeEditWidget.h  Class.cpp  Class.h  ClassAttribute.cpp  ClassAttribute.h  ClassDiagram.cpp  ClassDiagram.h  ClassDiagramManager.cpp  ClassDiagramManager.h  ClassDiagramMemento.h  ClassDiagramRepository.h  ClassDiagramScene.cpp  ClassDiagramScene.h  ClassDiagramWindow.cpp  ClassDiagramWindow.h  ClassEditDialog.cpp  (+104 more)
src/icp_project/: ClassDiagramWindow.cpp  ClassDiagramWindow.h  icp_project.pro
test/: save-class-diagram.cpp  save-sequence-diagram.cpp
test/basics/: assignment-rules.sh
